# ChangeLog for x11-apps/appres
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-apps/appres/ChangeLog,v 1.16 2006/07/01 01:43:28 spyderous Exp $

  01 Jul 2006; Donnie Berkholz <spyderous@gentoo.org>; appres-1.0.0.ebuild:
  ppc/sparc/mips/alpha/arm/sh stable

  24 May 2006; Donnie Berkholz <spyderous@gentoo.org>;
  files/digest-appres-1.0.0, Manifest:
  (#134079) Fix digest.

  20 May 2006; Robin H. Johnson <robbat2@gentoo.org> appres-1.0.0.ebuild:
  Added ~ppc after testing.

  28 Apr 2006; Marien Zwart <marienz@gentoo.org> files/digest-appres-1.0.0,
  Manifest:
  Revert to working digest.

  27 Apr 2006; Alec Warner <antarus@gentoo.org> files/digest-appres-1.0.0,
  Manifest:
  Fixing SHA256 digest, pass four

  24 Mar 2006; Donnie Berkholz <spyderous@gentoo.org>; appres-1.0.0.ebuild:
  (#127306) Digests changed between release candidates and final release for
  the same tarballs.

  08 Mar 2006; Diego Pettenò <flameeyes@gentoo.org> appres-1.0.0.ebuild:
  Add ~amd64 keyword (satisfy xscreensaver modular deps).

  14 Feb 2006; Markus Rothe <corsair@gentoo.org> appres-1.0.0.ebuild:
  Added ~ppc64

  26 Dec 2005; Joshua Baergen <joshuabaergen@gentoo.org>
  -appres-0.99.2.ebuild:
  Pull old versions.

*appres-1.0.0 (18 Dec 2005)

  18 Dec 2005; Joshua Baergen <joshuabaergen@gentoo.org>
  +appres-1.0.0.ebuild:
  Bump for 7.0RC4.

  09 Dec 2005; Donnie Berkholz <spyderous@gentoo.org>;
  -appres-0.99.0.ebuild, -appres-0.99.1.ebuild:
  Pull old versions.

*appres-0.99.2 (04 Dec 2005)

  04 Dec 2005; Joshua Baergen <joshuabaergen@gentoo.org>
  +appres-0.99.2.ebuild:
  Bump for 7.0RC3.

*appres-0.99.1 (20 Oct 2005)

  20 Oct 2005; Donnie Berkholz <spyderous@gentoo.org>;
  +appres-0.99.1.ebuild:
  Bump for 7.0 RC1.

  09 Sep 2005; Donnie Berkholz <spyderous@gentoo.org>; +metadata.xml:
  Add metadata.

  08 Aug 2005; Ferris McCormick <fmccor@gentoo.org> appres-0.99.0.ebuild:
  Add ~sparc keyword (Modular X testing).