@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/appres/appres-1.0.0.ebuild,v 1.6 2006/07/01 01:43:28 spyderous Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/appres/appres-1.0.0.ebuild,v 1.7 2006/07/01 01:46:06 spyderous Exp $
 
 # Must be before x-modular eclass is inherited
 #SNAPSHOT="yes"
@@ -9,7 +9,7 @@ inherit x-modular
 
 DESCRIPTION="X.Org appres application"
 RESTRICT="mirror"
-KEYWORDS="alpha ~amd64 arm mips ppc ~ppc64 ~s390 sh sparc ~x86"
+KEYWORDS="alpha amd64 arm mips ppc ppc64 ~s390 sh sparc x86"
 RDEPEND="x11-libs/libX11
 	x11-libs/libXt"
 DEPEND="${RDEPEND}"
