@@ -1,12 +1,12 @@
 DIST sessreg-1.0.0.tar.bz2 82193 RMD160 f00bc316a602db1d2ca839cde5bba58af9ec92c5 SHA1 2a583836ad049fe49bc4b968e63257ece676705b SHA256 9734c9f0e390ae74491e6a6062a5bccbf8f50a00e3ef144e750f9417b95f8143
-EBUILD sessreg-1.0.0.ebuild 485 RMD160 3882dfffc8ecd82770503d241c70155fc71f8805 SHA1 fe6b3ebadfebccc4cbfa396476fbd2a7fce33a49 SHA256 a95a3f1fefc3e6d54c53ee412ef5673ed0a12166129f3fee23b2c30bc72307d1
-MD5 39cf88039f32a9ac5862e606b30f0637 sessreg-1.0.0.ebuild 485
-RMD160 3882dfffc8ecd82770503d241c70155fc71f8805 sessreg-1.0.0.ebuild 485
-SHA256 a95a3f1fefc3e6d54c53ee412ef5673ed0a12166129f3fee23b2c30bc72307d1 sessreg-1.0.0.ebuild 485
-MISC ChangeLog 2382 RMD160 9528ab1f31ecea59fff5c7af1bf4c93752e8d4eb SHA1 fd7f4c78b3582b6a0cc158a861ece4e0e725a8af SHA256 16a0f1b4d6c39cd587e81072bfd7380f6e31a70ec85155fa4c6699fe4d47e802
-MD5 f713513f1d029e75decaf230bc801195 ChangeLog 2382
-RMD160 9528ab1f31ecea59fff5c7af1bf4c93752e8d4eb ChangeLog 2382
-SHA256 16a0f1b4d6c39cd587e81072bfd7380f6e31a70ec85155fa4c6699fe4d47e802 ChangeLog 2382
+EBUILD sessreg-1.0.0.ebuild 497 RMD160 bc20d90be6d4252f1afb1b5f9b2e8654714c0837 SHA1 dbc376514bfcfe5a26514cbe84ab3979377f61cd SHA256 44702e5764f0d57a4bb7f98b8fd92473c95aaf8ac39db6a3caabe6359e5bcdce
+MD5 f48593b502036c64d09dd3b08e80dea0 sessreg-1.0.0.ebuild 497
+RMD160 bc20d90be6d4252f1afb1b5f9b2e8654714c0837 sessreg-1.0.0.ebuild 497
+SHA256 44702e5764f0d57a4bb7f98b8fd92473c95aaf8ac39db6a3caabe6359e5bcdce sessreg-1.0.0.ebuild 497
+MISC ChangeLog 2499 RMD160 5dd913a66429b2b387335d0850f4d7d975703d1b SHA1 4e972fef0a7280c79c0eb2d18d373214213d0e91 SHA256 12d5c393888b9e23ea47f278e0776312d3e66e1d14182b1755e938b7de568ba9
+MD5 87779299465a3d2d579722ba3b5b9069 ChangeLog 2499
+RMD160 5dd913a66429b2b387335d0850f4d7d975703d1b ChangeLog 2499
+SHA256 12d5c393888b9e23ea47f278e0776312d3e66e1d14182b1755e938b7de568ba9 ChangeLog 2499
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
 MD5 a37bab73e2f24b213932c30997d3d360 metadata.xml 156
 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 metadata.xml 156
