@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/xwininfo/xwininfo-1.0.2.ebuild,v 1.3 2006/07/01 01:43:01 spyderous Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/xwininfo/xwininfo-1.0.2.ebuild,v 1.4 2006/07/01 01:46:42 spyderous Exp $
 
 # Must be before x-modular eclass is inherited
 #SNAPSHOT="yes"
@@ -8,7 +8,7 @@
 inherit x-modular
 
 DESCRIPTION="X.Org xwininfo application"
-KEYWORDS="alpha ~amd64 arm mips ppc ~ppc64 ~s390 sh sparc ~x86"
+KEYWORDS="alpha amd64 arm mips ppc ppc64 ~s390 sh sparc x86"
 RDEPEND="x11-libs/libXmu
 	x11-libs/libX11"
 DEPEND="${RDEPEND}"
