@@ -1,6 +1,10 @@
 # ChangeLog for x11-apps/xwininfo
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/xwininfo/ChangeLog,v 1.15 2006/07/01 01:43:01 spyderous Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/xwininfo/ChangeLog,v 1.16 2006/07/01 01:46:42 spyderous Exp $
+
+  01 Jul 2006; Donnie Berkholz <spyderous@gentoo.org>;
+  xwininfo-1.0.2.ebuild:
+  amd64/x86/ppc64 stable.
 
   01 Jul 2006; Donnie Berkholz <spyderous@gentoo.org>;
   xwininfo-1.0.2.ebuild:
