@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/appres
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/appres/ChangeLog,v 1.16 2006/07/01 01:43:28 spyderous Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/appres/ChangeLog,v 1.17 2006/07/01 01:46:06 spyderous Exp $
+
+  01 Jul 2006; Donnie Berkholz <spyderous@gentoo.org>; appres-1.0.0.ebuild:
+  amd64/x86/ppc64 stable.
 
   01 Jul 2006; Donnie Berkholz <spyderous@gentoo.org>; appres-1.0.0.ebuild:
   ppc/sparc/mips/alpha/arm/sh stable
